--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 hello js rocket
 
 
-<script type="text/ecmascript">
-    console.log('hello there !');
-
+<script type="text/javascript">
+    console.log('hello there');
 
 </script>
