--- a/index.html
+++ b/index.html
@@ -1,7 +1,35 @@
-hello js rocket
+<!DOCTYPE html>
+<html lang="en">
+
+    <head>
+        <meta charset="UTF-8">
+
+        <title>JS Rocket</title>
+
+        <script type="text/javascript">
+            var car = {
+                make: 'VW',
+                type: 'Polo',
+                color: 'blue',
+                isTurnedON: false, 
+                numberOfWheels: 4,
+                seats: [
+                    'seat 1', 
+                    'seat 2', 
+                    'seat 3', 
+                    'seat 4'
+                ]
+            };
+            
+            console.log('hello there');
+        </script>
+    </head>
+    
+    <body>
+        <h1>hello js rocket</h1>
+
+    </body>
+
+</html> 
 
 
-<script type="text/javascript">
-    console.log('hello there');
-
-</script>
